new URI instead of new URL, abstractjsonripper.